--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
+# VS Code files for those working on multiple tools
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
 # Ignore executables
 *.exe
